# demo_rgbd_new

./: CMakeLists.txt  package.xml
config/: downsample.yaml  euroc_config.yaml  robocane_config.yaml  tum_vio_config.yaml
feature_tracking/: featureTracking.cpp  feature_tracker.cpp  feature_tracker.h  feature_tracker_node.cpp  pointDefinition.h  test_feat_track.cpp
launch/: demo_pointcloud.launch  demo_rgbd.launch  demo_rgbd_slimmed.launch  demo_rgbd_slimmed.rviz  depth_test.launch  do_it.launch  online_publisher.launch  record_imu.launch  rs_rgbd.launch  show_result.launch  show_rviz.launch  test.launch  upboard_comm.sh  vio_demo.rviz  vio_laser.launch  vio_laser.rviz  vio_obs_avoid.launch  vio_run.launch  vio_tmp.launch  vio_upboard.launch
launch/downsample/: debug_show.launch  demo_pointcloud.launch  do_it.launch  do_it_r2232.launch  feature_tracker.launch  online_publisher.launch  test_rs_publish.launch  vio_laser.launch  vio_run.launch
launch/show_2d_result/: show_traj.launch
launch/stereo/: depth_test.launch  euroc_demo.rviz  feature_test.launch  vio_run.launch
rs_pub/: pub_rs_data.cpp  pub_rs_data2.cpp
src/: read_traj_log.cpp
vio/: .vio_node.cpp.swp  depth_handler_node.cpp  depth_handler_node_pc.cpp  imu_factor.h  parameters.cpp  parameters.h  projection_quat.cpp  projection_quat.h  test_projection.cpp  vio.cpp  vio.h  vio_node.cpp
vo/: depth_handler.cpp  depth_handler.h  depth_handler_node.cpp  projection_euler-Quat.cpp  projection_euler-ZXY.cpp  projection_euler-ZXY.h  projection_quat.cpp  projection_quat.h  stereo_triangulate.cpp  stereo_triangulate.h  test_depth_process.cpp  test_triangulate.cpp  test_vo.cpp  test_vo_euler.cpp  test_vo_euler_ip.cpp  test_vo_quaternion.cpp  test_vo_quaternion_ip.cpp  visual_odometry.cpp  visual_odometry.h  visual_odometry_node.cpp
